rabbitmq-cert-manager-k8s-gcp/cert-manager/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-cert-manager
  annotations:
    #cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    # Change this
    - mq.example.com
    secretName: rabbitmq-tls
  rules:
  # Change this
  - host: mq.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-backend
          servicePort: 80
